# preminder

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: api.rs  duration.rs  errors.rs  main.rs  run.rs  settings.rs  types.rs
src/output/: email.rs  hipchat.rs  mod.rs  stdout.rs  template_filters.rs
