[package]
name = "preminder"
version = "0.1.0"
authors = ["Anthony Nguyen <anknguyen@gmail.com>"]

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
clap = "2.26.0"
config = "0.7.0"
error-chain = "0.10.0"
lettre = "0.6.2"
log = "0.3.8"
loglog = "0.3.1"
rayon = "0.8.2"
regex = "0.2.2"
reqwest = "0.7.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
tera = "0.10.10"
